--- a/02-Training_Models.ipynb
+++ b/02-Training_Models.ipynb
@@ -21,9 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING - Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception unknown locale: UTF-8.\n"
+     ]
+    },
+    {
+     "ename": "UserErrorException",
+     "evalue": "UserErrorException:\n\tMessage: We could not find config.json in: /Users/susumuasaga/mslearn-aml-labs or in its parent directories. Please provide the full path to the config file or ensure that config.json exists in the parent directories.\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"code\": \"UserError\",\n        \"message\": \"We could not find config.json in: /Users/susumuasaga/mslearn-aml-labs or in its parent directories. Please provide the full path to the config file or ensure that config.json exists in the parent directories.\"\n    }\n}",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mUserErrorException\u001B[0m                        Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-1-c870faf8c46b>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;31m# Load the workspace from the saved config file\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mws\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcore\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mWorkspace\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfrom_config\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34mf'Ready to use Azure ML {core.VERSION} to work with {ws.name}'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/mslearn-aml-labs/conda-env/lib/python3.6/site-packages/azureml/core/workspace.py\u001B[0m in \u001B[0;36mfrom_config\u001B[0;34m(path, auth, _logger, _file_name)\u001B[0m\n\u001B[1;32m    272\u001B[0m                     \u001B[0;34m'We could not find config.json in: {} or in its parent directories. '\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    273\u001B[0m                     \u001B[0;34m'Please provide the full path to the config file or ensure that '\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 274\u001B[0;31m                     'config.json exists in the parent directories.'.format(normalized_path))\n\u001B[0m\u001B[1;32m    275\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    276\u001B[0m         subscription_id, resource_group, workspace_name = project_info.get_workspace_info(\n",
+      "\u001B[0;31mUserErrorException\u001B[0m: UserErrorException:\n\tMessage: We could not find config.json in: /Users/susumuasaga/mslearn-aml-labs or in its parent directories. Please provide the full path to the config file or ensure that config.json exists in the parent directories.\n\tInnerException None\n\tErrorResponse \n{\n    \"error\": {\n        \"code\": \"UserError\",\n        \"message\": \"We could not find config.json in: /Users/susumuasaga/mslearn-aml-labs or in its parent directories. Please provide the full path to the config file or ensure that config.json exists in the parent directories.\"\n    }\n}"
+     ]
+    }
+   ],
    "source": [
     "import azureml.core\n",
     "from azureml.core import Workspace\n",
@@ -39,7 +59,7 @@
    "source": [
     "## Create a Training Script\n",
     "\n",
-    "You're going to use a Python script to train a machine learning model based on the diabates data, so let's start by creating a folder for the script and data files."
+    "You're going to use a Python script to train a machine learning model based on the diabetes data, so let's start by creating a folder for the script and data files."
    ]
   },
   {
@@ -436,9 +456,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 - AzureML",
+   "name": "mslearn-aml-labs",
    "language": "python",
-   "name": "python3-azureml"
+   "display_name": "mslearn-aml-labs"
   },
   "language_info": {
    "codemirror_mode": {
