04-Working_with_Compute.ipynb

--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -19,16 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ready to use Azure ML 1.11.0 to work with workspace\n"
+     ]
+    }
+   ],
    "source": [
-    "import azureml.core\n",
-    "from azureml.core import Workspace\n",
+    "from azureml import core\n",
     "\n",
-    "# Load the workspace from the saved config file\n",
-    "ws = Workspace.from_config()\n",
-    "print('Ready to use Azure ML {} to work with {}'.format(azureml.core.VERSION, ws.name))"
+    "ws = core.Workspace.from_config()\n",
+    "print(f'Ready to use Azure ML {core.VERSION} to work with {ws.name}')"
    ]
   },
   {
@@ -44,33 +50,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset already registered.\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core import Dataset\n",
-    "\n",
     "default_ds = ws.get_default_datastore()\n",
     "\n",
     "if 'diabetes dataset' not in ws.datasets:\n",
-    "    default_ds.upload_files(files=['./data/diabetes.csv', './data/diabetes2.csv'], # Upload the diabetes csv files in /data\n",
-    "                        target_path='diabetes-data/', # Put it in a folder path in the datastore\n",
-    "                        overwrite=True, # Replace existing files of the same name\n",
-    "                        show_progress=True)\n",
+    "    default_ds.upload_files(\n",
+    "        files=['./data/diabetes.csv', './data/diabetes2.csv'],\n",
+    "        target_path='diabetes-data/',\n",
+    "        overwrite=True,\n",
+    "        show_progress=True,\n",
+    "    )\n",
     "\n",
-    "    #Create a tabular dataset from the path on the datastore (this may take a short while)\n",
-    "    tab_data_set = Dataset.Tabular.from_delimited_files(path=(default_ds, 'diabetes-data/*.csv'))\n",
+    "    tab_data_set = core.Dataset.Tabular.from_delimited_files(\n",
+    "        path=(default_ds, 'diabetes-data/*.csv')\n",
+    "    )\n",
     "\n",
-    "    # Register the tabular dataset\n",
-    "    try:\n",
-    "        tab_data_set = tab_data_set.register(workspace=ws, \n",
-    "                                name='diabetes dataset',\n",
-    "                                description='diabetes data',\n",
-    "                                tags = {'format':'CSV'},\n",
-    "                                create_new_version=True)\n",
-    "        print('Dataset registered.')\n",
-    "    except Exception as ex:\n",
-    "        print(ex)\n",
+    "    tab_data_set = tab_data_set.register(\n",
+    "        workspace=ws, \n",
+    "        name='diabetes dataset',\n",
+    "        description='diabetes data',\n",
+    "        tags = {'format':'CSV'},\n",
+    "        create_new_version=True,\n",
+    "    )\n",
+    "    print('Dataset registered.')\n",
     "else:\n",
     "    print('Dataset already registered.')"
    ]
@@ -529,5 +542,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
