--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -64,161 +64,7 @@
    "source": [
     "default_ds = ws.get_default_datastore()\n",
     "\n",
-    "if 'diabetes dataset' not in ws.datasets:\n",
-    "    default_ds.upload_files(\n",
-    "        files=['./data/diabetes.csv', './data/diabetes2.csv'],\n",
-    "        target_path='diabetes-data/',\n",
-    "        overwrite=True,\n",
-    "        show_progress=True,\n",
-    "    )\n",
-    "\n",
-    "    tab_data_set = core.Dataset.Tabular.from_delimited_files(\n",
-    "        path=(default_ds, 'diabetes-data/*.csv')\n",
-    "    )\n",
-    "\n",
-    "    tab_data_set = tab_data_set.register(\n",
-    "        workspace=ws, \n",
-    "        name='diabetes dataset',\n",
-    "        description='diabetes data',\n",
-    "        tags = {'format':'CSV'},\n",
-    "        create_new_version=True,\n",
-    "    )\n",
-    "    print('Dataset registered.')\n",
-    "else:\n",
-    "    print('Dataset already registered.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create Scripts for Pipeline Steps\n",
-    "\n",
-    "Now you're ready to start work on your pipeline. Pipelines consist of one or more *steps*, which can be Python scripts, or specialized steps like an Auto ML training estimator or a data transfer step that copies data from one location to another. Each step can run in its own compute context.\n",
-    "\n",
-    "In this exercise, you'll build a simple pipeline that contains an estimator step (to train a model) and a Python script step (to register the trained model). Start by creating a folder to contain the scripts for each step."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# Create a folder for the pipeline step files\n",
-    "experiment_folder = 'diabetes_pipeline'\n",
-    "os.makedirs(experiment_folder, exist_ok=True)\n",
-    "\n",
-    "print(experiment_folder)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first step will use an estimator to run a training script. The code in the following cell creates this script for you. Note that the script includes a parameter named **output_folder**, which references the folder where the trained model should be saved."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile $experiment_folder/train_diabetes.py\n",
-    "# Import libraries\n",
-    "from azureml.core import Run\n",
-    "import argparse\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import joblib\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "\n",
-    "# Get parameters\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--output_folder', type=str, dest='output_folder', default=\"diabetes_model\", help='output folder')\n",
-    "args = parser.parse_args()\n",
-    "output_folder = args.output_folder\n",
-    "\n",
-    "# Get the experiment run context\n",
-    "run = Run.get_context()\n",
-    "\n",
-    "# load the diabetes data (passed as an input dataset)\n",
-    "print(\"Loading Data...\")\n",
-    "diabetes = run.input_datasets['diabetes_train'].to_pandas_dataframe()\n",
-    "\n",
-    "# Separate features and labels\n",
-    "X, y = diabetes[['Pregnancies','PlasmaGlucose','DiastolicBloodPressure','TricepsThickness','SerumInsulin','BMI','DiabetesPedigree','Age']].values, diabetes['Diabetic'].values\n",
-    "\n",
-    "# Split data into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=0)\n",
-    "\n",
-    "# Train adecision tree model\n",
-    "print('Training a decision tree model')\n",
-    "model = DecisionTreeClassifier().fit(X_train, y_train)\n",
-    "\n",
-    "# calculate accuracy\n",
-    "y_hat = model.predict(X_test)\n",
-    "acc = np.average(y_hat == y_test)\n",
-    "print('Accuracy:', acc)\n",
-    "run.log('Accuracy', np.float(acc))\n",
-    "\n",
-    "# calculate AUC\n",
-    "y_scores = model.predict_proba(X_test)\n",
-    "auc = roc_auc_score(y_test,y_scores[:,1])\n",
-    "print('AUC: ' + str(auc))\n",
-    "run.log('AUC', np.float(auc))\n",
-    "\n",
-    "# Save the trained model\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
-    "output_path = output_folder + \"/model.pkl\"\n",
-    "joblib.dump(value=model, filename=output_path)\n",
-    "\n",
-    "run.complete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The script for the second step of the pipeline will load the model from where it was saved, and then register it in the workspace. It includes a single **model_folder** parameter that contains the path to the folder where the model was saved by the previous step."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile $experiment_folder/register_diabetes.py\n",
-    "# Import libraries\n",
-    "import argparse\n",
-    "import joblib\n",
-    "from azureml.core import Workspace, Model, Run\n",
-    "\n",
-    "# Get parameters\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--model_folder', type=str, dest='model_folder', default=\"diabetes_model\", help='model location')\n",
-    "args = parser.parse_args()\n",
-    "model_folder = args.model_folder\n",
-    "\n",
-    "# Get the experiment run context\n",
-    "run = Run.get_context()\n",
-    "\n",
-    "# load the model\n",
-    "print(\"Loading model from \" + model_folder)\n",
-    "model_file = model_folder + \"/model.pkl\"\n",
-    "model = joblib.load(model_file)\n",
-    "\n",
-    "Model.register(workspace=run.experiment.workspace,\n",
-    "               model_path = model_file,\n",
-    "               model_name = 'diabetes_model',\n",
-    "               tags={'Training context':'Pipeline'})\n",
-    "\n",
-    "run.complete()"
+    "print('Dataset already registered.')"
    ]
   },
   {
@@ -236,25 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing cluster, use it.\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "\n",
+      "Minimum number of nodes requested have been provisioned\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core.compute_target import ComputeTargetException\n",
+    "from azureml.core import compute\n",
     "\n",
-    "cluster_name = \"your-compute-cluster\"\n",
+    "cluster_name = \"susumu-cluster\"\n",
     "\n",
-    "# Verify that cluster exists\n",
-    "try:\n",
-    "    pipeline_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
-    "    print('Found existing cluster, use it.')\n",
-    "except ComputeTargetException:\n",
-    "    # If not, create it\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
-    "                                                           max_nodes=4,\n",
-    "                                                           idle_seconds_before_scaledown=1800)\n",
-    "    pipeline_cluster = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "pipeline_cluster = compute.ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "print('Found existing cluster, use it.')\n",
     "\n",
     "pipeline_cluster.wait_for_completion(show_output=True)"
    ]
@@ -268,37 +117,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run configuration created.\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core import Environment\n",
-    "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from azureml.core.runconfig import RunConfiguration\n",
+    "from azureml.core import conda_dependencies\n",
+    "from azureml.core import runconfig\n",
     "\n",
-    "# Create a Python environment for the experiment\n",
-    "diabetes_env = Environment(\"diabetes-pipeline-env\")\n",
-    "diabetes_env.python.user_managed_dependencies = False # Let Azure ML manage dependencies\n",
-    "diabetes_env.docker.enabled = True # Use a docker container\n",
+    "diabetes_env = core.Environment('diabetes-pipeline-env')\n",
+    "diabetes_env.python.user_managed_dependencies = False\n",
+    "diabetes_env.docker.enabled = True\n",
     "\n",
-    "# Create a set of package dependencies\n",
-    "diabetes_packages = CondaDependencies.create(conda_packages=['scikit-learn','pandas'],\n",
-    "                                             pip_packages=['azureml-defaults','azureml-dataprep[pandas]'])\n",
+    "diabetes_packages = conda_dependencies.CondaDependencies.create(\n",
+    "    conda_packages=['scikit-learn','pandas'],\n",
+    "    pip_packages=['azureml-defaults','azureml-dataprep[pandas]']\n",
+    ")\n",
     "\n",
-    "# Add the dependencies to the environment\n",
     "diabetes_env.python.conda_dependencies = diabetes_packages\n",
     "\n",
-    "# Register the environment (just in case you want to use it again)\n",
     "diabetes_env.register(workspace=ws)\n",
-    "registered_env = Environment.get(ws, 'diabetes-pipeline-env')\n",
+    "registered_env = core.Environment.get(ws, 'diabetes-pipeline-env')\n",
     "\n",
-    "# Create a new runconfig object for the pipeline\n",
-    "pipeline_run_config = RunConfiguration()\n",
+    "pipeline_run_config = runconfig.RunConfiguration()\n",
     "\n",
-    "# Use the compute you created above. \n",
     "pipeline_run_config.target = pipeline_cluster\n",
     "\n",
-    "# Assign the environment to the run configuration\n",
     "pipeline_run_config.environment = registered_env\n",
     "\n",
     "print (\"Run configuration created.\")"
@@ -317,43 +168,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'azureml.pipeline' has no attribute 'steps'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-22e417b0cb70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m )\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m train_step = pipeline.steps.EstimatorStep(\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Train Model'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mestimator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'azureml.pipeline' has no attribute 'steps'"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.pipeline.core import PipelineData\n",
-    "from azureml.pipeline.steps import PythonScriptStep, EstimatorStep\n",
-    "from azureml.train.estimator import Estimator\n",
+    "from azureml import pipeline\n",
+    "from azureml.train import estimator\n",
     "\n",
-    "# Get the training dataset\n",
-    "diabetes_ds = ws.datasets.get(\"diabetes dataset\")\n",
+    "diabetes_ds = ws.datasets.get('diabetes dataset')\n",
     "\n",
-    "# Create a PipelineData (temporary Data Reference) for the model folder\n",
-    "model_folder = PipelineData(\"model_folder\", datastore=ws.get_default_datastore())\n",
+    "model_folder = pipeline.core.PipelineData(\n",
+    "    \"model_folder\", datastore=ws.get_default_datastore(),\n",
+    ")\n",
     "\n",
-    "estimator = Estimator(source_directory=experiment_folder,\n",
-    "                        compute_target = pipeline_cluster,\n",
-    "                        environment_definition=pipeline_run_config.environment,\n",
-    "                        entry_script='train_diabetes.py')\n",
+    "experiment_folder = 'diabetes-pipeline'\n",
+    "config = estimator.Estimator(\n",
+    "    source_directory=experiment_folder,\n",
+    "    compute_target = pipeline_cluster,\n",
+    "    environment_definition=pipeline_run_config.environment,\n",
+    "    entry_script='train_diabetes.py'\n",
+    ")\n",
     "\n",
-    "# Step 1, run the estimator to train the model\n",
-    "train_step = EstimatorStep(name = \"Train Model\",\n",
-    "                           estimator=estimator, \n",
-    "                           estimator_entry_script_arguments=['--output_folder', model_folder],\n",
-    "                           inputs=[diabetes_ds.as_named_input('diabetes_train')],\n",
-    "                           outputs=[model_folder],\n",
-    "                           compute_target = pipeline_cluster,\n",
-    "                           allow_reuse = True)\n",
+    "train_step = pipeline.steps.EstimatorStep(\n",
+    "    name='Train Model',\n",
+    "    estimator=config, \n",
+    "    estimator_entry_script_arguments=['--output_folder', model_folder],\n",
+    "    inputs=[diabetes_ds.as_named_input('diabetes_train')],\n",
+    "    outputs=[model_folder],\n",
+    "    compute_target = pipeline_cluster,\n",
+    "    allow_reuse = True,\n",
+    ")\n",
     "\n",
-    "# Step 2, run the model registration script\n",
-    "register_step = PythonScriptStep(name = \"Register Model\",\n",
-    "                                source_directory = experiment_folder,\n",
-    "                                script_name = \"register_diabetes.py\",\n",
-    "                                arguments = ['--model_folder', model_folder],\n",
-    "                                inputs=[model_folder],\n",
-    "                                compute_target = pipeline_cluster,\n",
-    "                                runconfig = pipeline_run_config,\n",
-    "                                allow_reuse = True)\n",
+    "register_step = pipeline.steps.PythonScriptStep(\n",
+    "    name = 'Register Model',\n",
+    "    source_directory = experiment_folder,\n",
+    "    script_name = \"register_diabetes.py\",\n",
+    "    arguments = ['--model_folder', model_folder],\n",
+    "    inputs=[model_folder],\n",
+    "    compute_target = pipeline_cluster,\n",
+    "    runconfig = pipeline_run_config,\n",
+    "    allow_reuse = True,\n",
+    ")\n",
     "\n",
     "print(\"Pipeline steps defined\")"
    ]
