--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -176,10 +176,10 @@
      "evalue": "module 'azureml.pipeline' has no attribute 'steps'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-22e417b0cb70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m )\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m train_step = pipeline.steps.EstimatorStep(\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Train Model'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mestimator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'azureml.pipeline' has no attribute 'steps'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-7-22e417b0cb70>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     16\u001B[0m )\n\u001B[1;32m     17\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 18\u001B[0;31m train_step = pipeline.steps.EstimatorStep(\n\u001B[0m\u001B[1;32m     19\u001B[0m     \u001B[0mname\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'Train Model'\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     20\u001B[0m     \u001B[0mestimator\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mconfig\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: module 'azureml.pipeline' has no attribute 'steps'"
      ]
     }
    ],
@@ -232,91 +232,6 @@
     "OK, now you're ready to build the pipeline from the steps you've defined and run it as an experiment.\n",
     "\n",
     "> **Note**: This may take a while. The training cluster must be started and configured with the Python environment before the scripts can be run. Now might be a good time to take a coffee break!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from azureml.core import Experiment\n",
-    "from azureml.pipeline.core import Pipeline\n",
-    "from azureml.widgets import RunDetails\n",
-    "\n",
-    "# Construct the pipeline\n",
-    "pipeline_steps = [train_step, register_step]\n",
-    "pipeline = Pipeline(workspace = ws, steps=pipeline_steps)\n",
-    "print(\"Pipeline is built.\")\n",
-    "\n",
-    "# Create an experiment and run the pipeline\n",
-    "experiment = Experiment(workspace = ws, name = 'diabetes-training-pipeline')\n",
-    "pipeline_run = experiment.submit(pipeline, regenerate_outputs=True)\n",
-    "print(\"Pipeline submitted for execution.\")\n",
-    "\n",
-    "RunDetails(pipeline_run).show()\n",
-    "pipeline_run.wait_for_completion()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The widget above shows details of the pipeline as it runs. You can also monitor pipeline runs in the **Experiments** page in [Azure Machine Learning studio](https://ml.azure.com).\n",
-    "\n",
-    "> **Note**: If the widget displays the message `[\"AttributeError: 'NoneType' object has no attribute 'id'\\n\"]`, you can safely ignore it!\n",
-    "\n",
-    "When the pipeline has finished, a new model should be registered with a *Training context* tag indicating it was trained in a pipeline. Run the following code to verify this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core import Model\n",
-    "\n",
-    "for model in Model.list(ws):\n",
-    "    print(model.name, 'version:', model.version)\n",
-    "    for tag_name in model.tags:\n",
-    "        tag = model.tags[tag_name]\n",
-    "        print ('\\t',tag_name, ':', tag)\n",
-    "    for prop_name in model.properties:\n",
-    "        prop = model.properties[prop_name]\n",
-    "        print ('\\t',prop_name, ':', prop)\n",
-    "    print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Publish the Pipeline\n",
-    "\n",
-    "Now that you've created a pipeline and verified it works, you can publish it as a REST service."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "published_pipeline = pipeline.publish(name=\"Diabetes_Training_Pipeline\",\n",
-    "                                      description=\"Trains diabetes model\",\n",
-    "                                      version=\"1.0\")\n",
-    "rest_endpoint = published_pipeline.endpoint\n",
-    "print(rest_endpoint)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To use the endpoint, client applications need to make a REST call over HTTP. This request must be authenticated, so an authorization header is required. A real application would require a service principal with which to be authenticated, but to test this out, we'll use the authorization header from your current connection to your Azure workspace, which you can get using the following code:"
    ]
   },
   {
