--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -227,21 +227,17 @@
    },
    "outputs": [],
    "source": [
-    "from azureml.core import Experiment\n",
-    "from azureml.pipeline.core import Pipeline\n",
-    "from azureml.widgets import RunDetails\n",
+    "from azureml import widgets\n",
     "\n",
-    "# Construct the pipeline\n",
     "pipeline_steps = [train_step, register_step]\n",
-    "pipeline = Pipeline(workspace = ws, steps=pipeline_steps)\n",
-    "print(\"Pipeline is built.\")\n",
+    "pl = pipeline.core.Pipeline(workspace=ws, steps=pipeline_steps)\n",
+    "print('Pipeline is built.')\n",
     "\n",
-    "# Create an experiment and run the pipeline\n",
-    "experiment = Experiment(workspace = ws, name = 'diabetes-training-pipeline')\n",
+    "experiment = core.Experiment(workspace=ws, name='diabetes-training-pipeline')\n",
     "pipeline_run = experiment.submit(pipeline, regenerate_outputs=True)\n",
-    "print(\"Pipeline submitted for execution.\")\n",
+    "print('Pipeline submitted for execution.')\n",
     "\n",
-    "RunDetails(pipeline_run).show()\n",
+    "widgets.RunDetails(pipeline_run).show()\n",
     "pipeline_run.wait_for_completion()"
    ]
   },
