--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -230,11 +230,11 @@
     "from azureml import widgets\n",
     "\n",
     "pipeline_steps = [train_step, register_step]\n",
-    "pl = pipeline.core.Pipeline(workspace=ws, steps=pipeline_steps)\n",
+    "p = pipeline.core.Pipeline(workspace=ws, steps=pipeline_steps)\n",
     "print('Pipeline is built.')\n",
     "\n",
     "experiment = core.Experiment(workspace=ws, name='diabetes-training-pipeline')\n",
-    "pipeline_run = experiment.submit(pipeline, regenerate_outputs=True)\n",
+    "pipeline_run = experiment.submit(p, regenerate_outputs=True)\n",
     "print('Pipeline submitted for execution.')\n",
     "\n",
     "widgets.RunDetails(pipeline_run).show()\n",
