--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -673,7 +673,7 @@
       "#\n",
       "#     $ conda deactivate\n",
       "\n",
-      "\u001b[91m\n",
+      "\u001B[91m\n",
       "\n",
       "==> WARNING: A newer version of conda exists. <==\n",
       "  current version: 4.7.12\n",
@@ -684,7 +684,7 @@
       "    $ conda update -n base -c defaults conda\n",
       "\n",
       "\n",
-      "\u001b[0mWARNING: /root/.conda/pkgs does not exist\n",
+      "\u001B[0mWARNING: /root/.conda/pkgs does not exist\n",
       "Removing intermediate container 532fecebc0c2\n",
       " ---> fec1adf0c4b5\n",
       "Step 9/15 : ENV PATH /azureml-envs/azureml_b12824a0eee159365ccfe3146b58a1cd/bin:$PATH\n",
@@ -1141,9 +1141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core import Model\n",
-    "\n",
-    "for model in Model.list(ws):\n",
+    "for model in core.Model.list(ws):\n",
     "    print(model.name, 'version:', model.version)\n",
     "    for tag_name in model.tags:\n",
     "        tag = model.tags[tag_name]\n",
