--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -23,6 +23,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception (portalocker 2.0.0 (/anaconda/envs/azureml_py36/lib/python3.6/site-packages), Requirement.parse('portalocker~=1.0'), {'msal-extensions'}).\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +680,7 @@
       "#\n",
       "#     $ conda deactivate\n",
       "\n",
-      "\u001B[91m\n",
+      "\u001b[91m\n",
       "\n",
       "==> WARNING: A newer version of conda exists. <==\n",
       "  current version: 4.7.12\n",
@@ -684,7 +691,7 @@
       "    $ conda update -n base -c defaults conda\n",
       "\n",
       "\n",
-      "\u001B[0mWARNING: /root/.conda/pkgs does not exist\n",
+      "\u001b[0mWARNING: /root/.conda/pkgs does not exist\n",
       "Removing intermediate container 532fecebc0c2\n",
       " ---> fec1adf0c4b5\n",
       "Step 9/15 : ENV PATH /azureml-envs/azureml_b12824a0eee159365ccfe3146b58a1cd/bin:$PATH\n",
@@ -1137,9 +1144,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diabetes_model version: 6\n",
+      "\t Training context : Pipeline\n",
+      "\n",
+      "\n",
+      "diabetes_model version: 5\n",
+      "\t Training context : Parameterized SKLearn Estimator\n",
+      "\t AUC : 0.8483904671874223\n",
+      "\t Accuracy : 0.7736666666666666\n",
+      "\n",
+      "\n",
+      "diabetes_model version: 4\n",
+      "\t Training context : Parameterized SKLearn Estimator\n",
+      "\t AUC : 0.8483904671874223\n",
+      "\t Accuracy : 0.7736666666666666\n",
+      "\n",
+      "\n",
+      "diabetes_model version: 3\n",
+      "\t Training context : Estimator\n",
+      "\t AUC : 0.8484929598487486\n",
+      "\t Accuracy : 0.774\n",
+      "\n",
+      "\n",
+      "diabetes_model version: 2\n",
+      "\t Training context : Estimator\n",
+      "\t AUC : 0.8483377282451863\n",
+      "\t Accuracy : 0.774\n",
+      "\n",
+      "\n",
+      "diabetes_model version: 1\n",
+      "\t Training context : Estimator\n",
+      "\t AUC : 0.8483377282451863\n",
+      "\t Accuracy : 0.774\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for model in core.Model.list(ws):\n",
     "    print(model.name, 'version:', model.version)\n",
