--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -680,7 +680,7 @@
       "#\n",
       "#     $ conda deactivate\n",
       "\n",
-      "\u001b[91m\n",
+      "\u001B[91m\n",
       "\n",
       "==> WARNING: A newer version of conda exists. <==\n",
       "  current version: 4.7.12\n",
@@ -691,7 +691,7 @@
       "    $ conda update -n base -c defaults conda\n",
       "\n",
       "\n",
-      "\u001b[0mWARNING: /root/.conda/pkgs does not exist\n",
+      "\u001B[0mWARNING: /root/.conda/pkgs does not exist\n",
       "Removing intermediate container 532fecebc0c2\n",
       " ---> fec1adf0c4b5\n",
       "Step 9/15 : ENV PATH /azureml-envs/azureml_b12824a0eee159365ccfe3146b58a1cd/bin:$PATH\n",
@@ -1215,9 +1215,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "published_pipeline = pipeline.publish(name=\"Diabetes_Training_Pipeline\",\n",
-    "                                      description=\"Trains diabetes model\",\n",
-    "                                      version=\"1.0\")\n",
+    "published_pipeline = p.publish(\n",
+    "    name='Diabetes_Training_Pipeline',\n",
+    "    description=\"Trains diabetes model\",\n",
+    "    version=\"1.0\",\n",
+    ")\n",
     "rest_endpoint = published_pipeline.endpoint\n",
     "print(rest_endpoint)"
    ]
